<resources>
    <string name="app_name" translatable="false">OGameMobile</string>
    <string name="email_or_username">Email or username</string>
    <string name="password">Password</string>
    <string name="connection_error">Network error. Check your internet connection and try again.</string>
    <string name="sign_in">Sign in</string>
    <string name="universum">Universum:</string>
    <string name="downloading">Downloading</string>
    <string name="get_universum_list_failed">Failed to download list universum. Check your internet connection and try again.</string>
    <string name="try_again">Try again</string>
    <string name="refresh">Refresh</string>
    <string name="login_in_progress">Login in progress</string>
    <string name="login_failed">Login or password is incorrect</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="overview">Overview</string>
    <string name="resources">Resources</string>
    <string name="station">Station</string>
    <string name="research">Research</string>
    <string name="shipyard">Shipyard</string>
    <string name="defense">Defense</string>
    <string name="building">Building…</string>
    <string name="ready_to_build">Ready to build</string>
    <string name="ready_to_upgrade">Ready to upgrade</string>
    <string name="too_few_resources">Too few resources or queue is full</string>
    <string name="unmet_requirements">Requirement is not met</string>
    <string name="remaining">Remaining:</string>
    <string name="done">Done</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unexpected_logout">Unexpected logout</string>
    <string name="login_retry">Login retry</string>
    <string name="level">Level: %1$s</string>
    <string name="requirements_to_next_level">Requirements to next level:</string>
    <string name="moon">Moon</string>
    <string name="close">Close</string>
    <string name="more">More</string>
    <string name="abort_build">Abort build</string>
    <string name="demolish">Demolish</string>
    <string name="level_upgrade"><![CDATA[%1$s <small>%2$s</small>]]></string>
    <string name="level_downgrade"><![CDATA[<small>%2$s</small> %1$s]]></string>
    <string name="level_build_count"><![CDATA[%1$s <small>+ %2$s</small>]]></string>
    <string name="settings">Settings</string>
    <string name="login_settings">Login settings</string>
    <string name="ogame_server">OGame server</string>
    <string name="save_login">Remember login</string>
    <string name="save_login_desc">Remember last login and selected universe</string>
    <string name="fleet">Fleet</string>
    <string name="next">Next</string>
    <string name="select_all">All</string>
    <string name="clear">Clear</string>
</resources>
